5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4362/executions/1670_2968.log
== TEST (2019-04-16 18:08:47) 
-- CODE:
print(round(5+3.50+4))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:09:05) 
-- CODE:
print(round(5))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:09:37) 
-- CODE:
print(round(5+3.50+4))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:09:46) 
-- CODE:
print(round(5+3,50+4))
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:09:56) 
-- CODE:
print(round(5 + 3,50))
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:10:05) 
-- CODE:
print(round(5 + 3.50))
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:10:15) 
-- CODE:
print(round(5 + 3.50))
-- EXECUTION TIME:
0.13569
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
8
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
8
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:10:24) 
-- CODE:
print(round(5 + 3.50+4))
-- EXECUTION TIME:
0.163135
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
12
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
12
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:10:26) 
-- CODE:
print(round(5 + 3.50+4))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:11:10) 
-- CODE:
print(round("valor total"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round("valor total"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:11:14) 
-- CODE:
print(round("valor total?"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round("valor total?"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:37) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:16:02) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:17:42) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(a+b+c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:18:11) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(a + b + c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:07) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + b + c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:28) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:19:44) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- EXECUTION TIME:
0.146604
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:06) 
-- CODE:
l=float(input("digite a: "))
s=float(int("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:21) 
-- CODE:
l=float(input("digite a: "))
s=float(int  ("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:33) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:20:43) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- EXECUTION TIME:
0.134885
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:06) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print9round((l + s + r))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:25) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round((l + s + r))
-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:43) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

round(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:57) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

round(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:15) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:50) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:14) 
-- CODE:
l=float(input("digite a: "))
s=float(round("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:36) 
-- CODE:
l=float(input("digite a: "))
s=float(round*2("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:33) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round*2((l + s + r))
-- ERROR:
File "XXXX", line 6
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:43) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:27:05) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- EXECUTION TIME:
0.170607
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:07) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:59) 
-- CODE:
l=float(input("digite a: "))
s=int(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:32) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:31:16) 
-- CODE:
l=float(input("digite a: "))
s=round("digite b: ")
r=float(input("digite c: "))

print(l + s + r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:21) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round a,2(l + s + r))
-- ERROR:
File "XXXX", line 5
    print(round a,2(l + s + r))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:37:56) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round(l + s + r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:08) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round(l + s + r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:16) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round(l + s + r , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:33) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round(l + s + r , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:06) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round(l + s + r*2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:39:23) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round(l + s + r*2))

-- EXECUTION TIME:
0.152611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:47) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round(l + s + r , 2 ))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:40:01) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(round(l + s + r , 2 ))

-- EXECUTION TIME:
0.142512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:55) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r , 2 )
round(12.5000000000, 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:17) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r , 2 )
round(12.5000000000,0)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:43) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r,0 )
round(12.5000000000,0)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:41:57) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r,0 )
round(12.5000000000,0)

-- EXECUTION TIME:
0.156097
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:05) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r0 )
round(12.500,0)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:24) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r 0 )
round(12.500,0)

-- ERROR:
File "XXXX", line 5
    print(l + s + r 0 )
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:30) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r,0 )
round(12.500,0)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:17) 
-- CODE:
l=float(input("digite a: "))
s=float(input("digite b: "))
r=float(input("digite c: "))

print(l + s + r )
round(l + s + r,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:06) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))

print(l + s + r )
round(l + s + r,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:22) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))

print(l + s + r )
round(l + s + r,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:39) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))

print(round(l + s + r,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:58) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))

print(round*(l + s + r,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:19) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))

print(round(l + s + r,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:46) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))
print(round(l+s+r, 2)

-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:58) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))

print(round(l+s+r, 2)

-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:47:08) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))

print(round(l + s+ r, 2)

-- EXECUTION TIME:
0.159927
-- ERROR:
  File "/home/codebench/codes/1670/2968/main.py", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:10) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))

print(round(l + s+ r, 2)

-- ERROR:
File "XXXX", line 6
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:24) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))

print(round(l + s+ r, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:57) 
-- CODE:
l=float(input("digite l: "))
s=float(input("digite s: "))
r=float(input("digite r: "))

print(round(1*l + 1*s+ 1*r, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:30) 
-- CODE:
l=float(input("digite l: ")) 
r=float(input("digite r: "))

print(round( l + r , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input()) 
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:41) 
-- CODE:
l=float(input("digite l: ")) 
r=float(input("digite r: "))

print(round( l + r , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input()) 
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:53) 
-- CODE:
l=float(input("digite l: ")) 
r=float(input("digite r: "))

print(round( l*2 + r , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input()) 
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:50:03) 
-- CODE:
l=float(input("digite l: ")) 
r=float(input("digite r: "))

print(round( l*2 + r , 2))

-- EXECUTION TIME:
0.118047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    l=float(input()) 
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:29) 
-- CODE:
l=float(input("digite l: ")) 
r=float(input("digite r: "))

print(round( l + r , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input()) 
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:40) 
-- CODE:
l=float(input("digite l: ")) 
r=float(input("digite r: "))

print(round( l + r , 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    l=float(input()) 
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:05) 
-- CODE:
round(1,344444444444444444444, 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(1,344444444444444444444, 2)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:28) 
-- CODE:
print(round(1,344444444444444444444, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(1,344444444444444444444, 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:52:54) 
-- CODE:
s=float(input("digite s:"))
r=float(inout("digite r:"))

print(round(s + r, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:53:06) 
-- CODE:
s=float(input("digite s:"))
r=float(input("digite r:"))

print(round(s + r, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:53:23) 
-- CODE:
s=float(input("digite s:"))
r=float(input("digite r:"))

print(round(s + r, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:53:26) 
-- CODE:
s=float(input("digite s:"))
r=float(input("digite r:"))

print(round(s + r, 2))
-- EXECUTION TIME:
0.138937
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2968/main.py", line 1, in <module>
    s=float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
